--- a/website/newsletter/267/index.mdx
+++ b/website/newsletter/267/index.mdx
@@ -34,18 +34,14 @@ Make React apps fast where it actually matters.
 
 An advanced performance course from **Steve Kinney**, focused on diagnosing real bottlenecks and fixing slow, janky React apps using modern React 19 patterns.
 
-🚀 **Modern React**: Suspense, transitions, deferred values, hydration, server actions
-
-🔍 **Debug Faster**: Find unnecessary re-renders with React DevTools & the Profiler
-
-🧠 **Smart Optimization**: Memoization, virtualization, code splitting, optimistic UI
-
-⚡ **Feel-Fast UX**: Learn how React Fiber prioritizes work to keep apps responsive
+- 🚀 **Modern React**: Suspense, transitions, deferred values, hydration, server actions
+- 🔍 **Debug Faster**: Find unnecessary re-renders with React DevTools & the Profiler
+- 🧠 **Smart Optimization**: Memoization, virtualization, code splitting, optimistic UI
+- ⚡ **Feel-Fast UX**: Learn how React Fiber prioritizes work to keep apps responsive
 
 ⏱ 4+ hours • ⭐ 4.8 rating
 
-🏫 From **Frontend Masters**
-
+🏫 From **Frontend Masters**\
 👉 Watch the course: [https://frontendmasters.com/courses/react-performance-v2/](https://frontendmasters.com/courses/react-performance-v2/?utm_source=reactweekly&utm_medium=email&utm_campaign=reactperf)
 
 ---
