--- a/website/newsletter/267/index.mdx
+++ b/website/newsletter/267/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /267
-title: "This Week In React #267: ..."
+title: "This Week In React #267: ViewTransition, Skills, Bun, Next-Intl, Grab, Aria, Gatsby, R3f | Worklets, Teleport, Voltra, AI SDK, Screens, Tamagui, Xcode, Agent-Device | State of JS, Temporal, Babel, Astro, npmx"
 authors: [slorber]
 date: 02-04-2026
-unlisted: true
 ---
 
 Hi everyone\!
