--- a/website/newsletter/267/index.mdx
+++ b/website/newsletter/267/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /267
-title: "This Week In React #267: ViewTransition, Skills, Bun, Next-Intl, Grab, Aria, Gatsby, R3f | Worklets, Teleport, Voltra, AI SDK, Screens, Tamagui, Xcode, Agent-Device | State of JS, Temporal, Babel, Astro, npmx"
+title: "This Week In React #267: Bun, Next-Intl, Grab, Aria, ViewTransition, Skills, Gatsby, R3f | Worklets, Teleport, Voltra, AI SDK, Screens, Tamagui, Xcode, Agent-Device | State of JS, Temporal, Babel, Astro, npmx"
 authors: [slorber]
 date: 02-04-2026
 ---
