--- a/website/newsletter/268/index.mdx
+++ b/website/newsletter/268/index.mdx
@@ -1,14 +1,15 @@
 ---
 slug: /268
-title: "This Week In React #268: ..."
+title: "This Week In React #268: Bulletproof Comps, Render Types, Tambo, Logo Soup, Compiler Marker, Ink, Streamdown | RN 0.84, Gestures, Rozenite, Storybook, JSON Render, Targets, TrueSheet | TypeScript, ESLint, Webpack, Vitest, VSCode"
 authors: [slorber]
 date: 02-11-2026
-unlisted: true
 ---
 
-Hi everyone!
+Hi everyone\!
 
-<Todo />
+This week, we have a good variety of React content, with great community articles and various releases. Many generative UI solutions are emerging, and I’m curious to better understand how they differ from one another.
+
+React Native 0.84 just dropped, and Gesture Handler 3 is in beta. Expo SDK 55 should also be out soon.
 
 <!-- truncate -->
 
