--- a/website/newsletter/268/index.mdx
+++ b/website/newsletter/268/index.mdx
@@ -143,7 +143,7 @@ This new major version has been overhauled internally. It drops support for the 
 
 ## 🔀 Other {#other}
 
-- 👀 [TypeScript 6.0 Iteration Plan](https://github.com/microsoft/TypeScript/issues/63085) \- The last JS-based version (no 6.1 planned) is about to drop in beta. A bridge release that prepares us for the faster 7.0 Go rewrite. One notable change is to turn strict mode on by default.
+- 👀 [TypeScript 6.0 Iteration Plan](https://github.com/microsoft/TypeScript/issues/63085) \- The last JS-based version (no 6.1 planned) is about to drop in beta (last minute edit: [6.0 beta is out](https://devblogs.microsoft.com/typescript/announcing-typescript-6-0-beta/)). A bridge release that prepares us for the faster 7.0 Go rewrite. One notable change is to turn strict mode on by default.
 - 👀 [Webpack \- Roadmap 2026](https://webpack.js.org/blog/2026-04-02-roadmap-2026/) \- The historical bundler plans to ship several new features, such as native CSS module, TS loader, multi-threading support, a universal runtime target, a unified minimizer API, and more. They also published v5.105 recently, with support for `tsconfig.json` alias resolution.
 - 📖 [Vitest 4.1 beta \- Test tags](https://main.vitest.dev/guide/test-tags.html) \- This upcoming feature lets you categorize tests under tags that you can configure independently. For example, you could tag a test as flaky to assign it a specific retry/timeout policy.
 - 📜 [The Wrong Work, Done Beautifully](https://domenic.me/jsdom-claude-code/) \- The author of `jsdom` reflects on the usefulness of his popular library compared to headless browsers. However, Claude Code restored his enthusiasm for maintaining the project. By the way, v28.0 is out.
