--- a/website/newsletter/268/index.mdx
+++ b/website/newsletter/268/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /268
-title: "This Week In React #268: Bulletproof Comps, Render Types, Tambo, Logo Soup, Compiler Marker, Ink, Streamdown | RN 0.84, Gestures, Rozenite, Storybook, JSON Render, Targets, TrueSheet | TypeScript, ESLint, Webpack, Vitest, VSCode"
+title: "This Week In React #268: Bulletproof Comps, Render Types, Tambo, Logo Soup, React Compiler, Ink, Streamdown | RN 0.84, Gestures, Rozenite, Storybook, JSON Render, Targets, TrueSheet | TypeScript, ESLint, Webpack, Vitest, VSCode"
 authors: [slorber]
 date: 02-11-2026
 ---
