--- a/website/newsletter/268/index.mdx
+++ b/website/newsletter/268/index.mdx
@@ -49,7 +49,7 @@ A great read from an experienced Vercel engineer, sharing various lessons to har
 ---
 
 - 💸 [FormEngine Core – Lightweight React JSON Schema form builder library for MUI with true cross-app reuse. No deep React knowledge required](https://formengine.io/lightweight-react-json-schema-form-builder-library-for-mui?utm_source=thisweekinreact&utm_medium=link&utm_campaign=mui&utm_content=lightweight&utm_term=nodeepreactknowledgerequired)
-- 📜 [A React trick to improve exit animations](https://barvian.me/react-exit-animations) \- A trick to free the component’s content while it’s animating to avoid visual glitches.
+- 📜 [A React trick to improve exit animations](https://barvian.me/react-exit-animations) \- Freezing the component’s content while it’s animating to avoid visual glitches.
 - 📜 [The Recent CVEs in React and Node.js Were Found by an AI](https://winfunc.com/blog/recent-0-days-in-nodejs-and-react-were-found-by-an-ai) \- Interesting to see the process of security researchers to find the recent RSC DoS vulnerability, and how it can be automated.
 - 📜 [React Compiler and why class objects can work against memoization](https://anita-app.com/blog/articles/react-compiler-and-why-class-objects-work-against-memoization.html) \- Prefer plain data and pure helpers that the React compiler can observe as inputs.
 - 📜 [The logo soup problem (and how to solve it)](https://www.sanity.io/blog/the-logo-soup-problem) \- Brand logos come in various logo shapes, aspect ratios, padding, and weights. Creating a visually aesthetic logo grid is surprisingly complex, but we now have a React library to help normalize them.
