--- a/website/newsletter/269/index.mdx
+++ b/website/newsletter/269/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 <Todo />
 
-*   🗓 [React Paris 2026](https://react.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 26 & 27 March. Last chance to join! Ticket sales close on March 4th - don't miss this premier React event. Get a 10% discount with code "TWIR".
+- 🗓 [React Paris 2026](https://react.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 26 & 27 March. Last chance to join! Ticket sales close on March 4th - don't miss this premier React event. Get a 10% discount with code "TWIR".
 
 <!-- truncate -->
 
@@ -51,9 +51,9 @@ CodeRabbit is free for all open-source repo's.
 
 ## 💸 Sponsor {#sponsor2}
 
-[![What If Debugging Took Seconds? Free Seer Workshop.](/emails/issues/269/sentry.jpg)](https://sentry.io/resources/seer-workshop-series/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=seer-fy27q1-seerworkshop&utm_content=newsletter-workshop-register)
+[![Free Workshop: Debug React Apps With AI From Dev to Prod](/emails/issues/269/sentry.jpg)](https://sentry.io/resources/seer-workshop-series/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=seer-fy27q1-seerworkshop&utm_content=newsletter-workshop-register)
 
-**[What If Debugging Took Seconds? Free Seer Workshop.](https://sentry.io/resources/seer-workshop-series/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=seer-fy27q1-seerworkshop&utm_content=newsletter-workshop-register)**
+**[Free Workshop: Debug React Apps With AI From Dev to Prod](https://sentry.io/resources/seer-workshop-series/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=seer-fy27q1-seerworkshop&utm_content=newsletter-workshop-register)**
 
 🧠 [**Seer** is Sentry's AI debugging agent](https://sentry.io/product/seer/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=seer-fy27q1-seerlaunch&utm_content=newsletter-product-trysentry). It root causes errors, suggests fixes, and catches bugs in code review before they hit production.
 
